--- a/style/style.css
+++ b/style/style.css
@@ -25,3 +25,17 @@ html {
   height: 20px;
   background-color: darkgreen;
 }
+.btnStart {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80px;
+  height: 22px;
+  background-color: darkkhaki;
+  border: 1px solid black;
+  border-radius:  3px;
+}
+.for_btn {
+  position: relative;
+
+}
