--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@ html {
   width: 400px;
   height: 400px;
   background-color: burlywood;
+  overflow: hidden;
 }
 .heads {
   position: absolute;
@@ -25,8 +26,12 @@ html {
   height: 20px;
   background-color: darkgreen;
 }
-.btnStart {
+.btnStart,
+.btnStop,
+.horizont,
+.vertikal {
   display: block;
+  margin-top: 6px;
   margin-left: auto;
   margin-right: auto;
   width: 80px;
@@ -34,6 +39,14 @@ html {
   background-color: darkkhaki;
   border: 1px solid black;
   border-radius:  3px;
+}
+.btnStart:hover,
+.btnStop:hover {
+  background-color: rgb(224, 228, 166);
+}
+.btnStart:active, .btnStop:active {
+  background-color: rgb(219, 175, 109);
+  transition: all 0.5s;
 }
 .for_btn {
   position: relative;
