--- a/style/style.css
+++ b/style/style.css
@@ -20,12 +20,14 @@ html {
   background-color: burlywood;
   overflow: hidden;
 }
-.heads {
+.kub {
   position: absolute;
   width: 20px;
   height: 20px;
-  top: 190px;
   background-color: darkgreen;
+}
+.heads {
+  background-color: brown;
 }
 .btnStart,
 .btnStop,
@@ -51,5 +53,10 @@ html {
 }
 .for_btn {
   position: relative;
-
+}
+#pole {
+  width: 400px;
+  height: 400px;
+  border: 1px solid black;
+  background-color: burlywood;
 }
