--- a/style/style.css
+++ b/style/style.css
@@ -13,18 +13,23 @@ html {
 }
 
 .container {
-  margin: 20px auto;
-  position: relative;
+  margin: 20px auto; 
+  display: grid;
+  grid-template: repeat(20, 20px) / repeat(20,20px);
+  grid-auto-flow: row;
   width: 400px;
   height: 400px;
-  background-color: burlywood;
-  overflow: hidden;
 }
 .kub {
-  position: absolute;
   width: 20px;
   height: 20px;
-  background-color: darkgreen;
+  background-color: burlywood;
+}
+.kub_activ {
+  background-color: darkcyan
+  
+  
+  ;
 }
 .heads {
   background-color: brown;
@@ -54,9 +59,7 @@ html {
 .for_btn {
   position: relative;
 }
-#pole {
-  width: 400px;
-  height: 400px;
-  border: 1px solid black;
-  background-color: burlywood;
+td, tr {
+  height: 20px;
+  width: 20px;
 }
