--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,14 @@ html {
 body {
   font-family: 'Anton', sans-serif;
 }
+tr,td,th {
+  border: 1px solid black;
+  margin: 4px;
+  height: 28px;
+  width: 50px;
+  text-align: center;
+}
+
 .header {
   display: flex;
   justify-content: space-around;
@@ -38,6 +46,9 @@ h1{
 h2 {
   font-family: 'Fredoka One', cursive;
   color: rgba(48, 41, 107, 0.644);
+}
+.rec {
+  text-align: center;
 }
 .main {
   display: flex;
@@ -86,12 +97,13 @@ label {
 }
 .container {
   position: relative;
+  border: 4px solid rgba(70, 125, 151, 0.692);
   margin: 30px; 
   display: grid;
   grid-template: repeat(20, 20px) / repeat(20,20px);
   grid-auto-flow: row;
-  width: 400px;
-  height: 400px;
+  width: 408px;
+  height: 408px;
 }
 .kub {
   width: 20px;
@@ -124,6 +136,16 @@ label {
   font-family: 'Anton', sans-serif;
   font-size: 18px;
 }
+#enter {
+  margin-bottom: 10px;
+  width: 100px;
+  height: 28px;
+  text-align: center;
+  background-color: rgb(209, 201, 124);
+  border: 1px solid black;
+  font-size: 18px;
+  font-family: 'Anton', sans-serif;
+}
 .btnStart:hover,
 .btnCont:hover,
 .btnStop:hover {
@@ -135,10 +157,6 @@ label {
 }
 .for_btn {
   position: relative;
-}
-td, tr {
-  height: 20px;
-  width: 20px;
 }
 .over {
   position: absolute;
