--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,3 @@
-@import url(_medi.css);
-
 * {
   padding: 0;
   margin: 0;
@@ -42,13 +40,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 80px 20px 1fr 70px;
-}
-
-.main {
-  grid-row: 3 / 4;
-  grid-column: 1 / end;
-  display: grid;
+  grid-template-rows: 80px 1fr 108px 70px;
   grid-template-columns: .8fr 1fr .8fr;
 }
 
@@ -97,7 +89,7 @@ th {
   background-color: rgba(116, 101, 156, 0.548);
   border-radius: 5px;
   display: grid;
-  grid-template: 70px / repeat(2, 1fr) repeat(2, 0.8fr) repeat(3, .4fr);
+  grid-template: 70px / repeat(4, 0.8fr) repeat(3, .4fr);
   position: relative;
 }
 
@@ -122,6 +114,10 @@ th {
   grid-column: 2 / 3;
 }
 
+.info {
+  grid-column: 6/7;
+}
+
 .logo {
   display: flex;
   justify-content: end;
@@ -132,8 +128,11 @@ th {
 .points_snake,
 .points_result,
 .language,
+.mob_menu,
+.record_mob,
 .info {
   align-self: center;
+  justify-self: center;
 }
 
 h1,
@@ -159,6 +158,21 @@ h2 {
 .left,
 .right {
   padding-top: 40px;
+}
+
+.left {
+  grid-row: 2/3;
+  grid-column: 1/2;
+}
+
+.container {
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+
+.right {
+  grid-row: 2/3;
+  grid-column: 3/4;
 }
 
 span {
@@ -236,8 +250,7 @@ a {
 }
 
 .btnStart,
-.btnStop,
-.btnCont {
+.btnStop {
   display: block;
   margin-top: 6px;
   margin-left: auto;
@@ -251,11 +264,11 @@ a {
 }
 
 #enter {
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   width: 100px;
   height: 28px;
   text-align: center;
-  background-color: rgb(209, 201, 124);
+  background-color: rgb(124, 209, 198);
   border: 1px solid black;
   font-size: 18px;
   display: block;
@@ -263,7 +276,6 @@ a {
 }
 
 .btnStart:hover,
-.btnCont:hover,
 .btnStop:hover {
   background-color: rgb(224, 228, 166);
 }
@@ -339,11 +351,6 @@ footer {
 @media (max-width: 425px) {
   main {
     margin: 0 auto;
-    display: block;
-  }
-
-  .main {
-    display: block;
   }
 
   h2 {
@@ -354,7 +361,25 @@ footer {
     font-size: small;
   }
 
+  .kub {
+    width: 15px;
+    height: 15px;
+    background-color: rgba(164, 182, 116, 0.918);
+    transition: all .1s ease;
+  }
+
+  .kub_activ {
+    background-color: rgba(48, 41, 107, 0.644);
+    transition: all .2s ease;
+  }
+
+  .food {
+    background-color: rgb(20, 136, 49);
+  }
+
   .mobail_button {
+    grid-row: 3/4;
+    grid-column: 1/end;
     display: grid;
     grid-template-rows: repeat(2, 54px);
     grid-template-columns: repeat(2, .4fr) 1fr repeat(2, .4fr);
@@ -384,6 +409,17 @@ footer {
     grid-column: 5/6;
   }
 
+  .left {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    justify-self: center;
+    padding: 5px;
+  }
+
+  #enter {
+    margin-bottom: 10px;
+  }
+
   #mBot1,
   #mBot2,
   #mBot3,
@@ -394,8 +430,7 @@ footer {
   }
 
   .header {
-    width: 100%;
-    height: 100%;
+    max-height: 55px;
     background-color: rgba(116, 101, 156, 0.548);
     display: grid;
     grid-template-rows: 32px 22px;
@@ -410,6 +445,11 @@ footer {
     grid-column: 1/2;
   }
 
+  .container {
+    grid-row: 2/3;
+    grid-column: 1/end;
+  }
+
   .title,
   .titleH2 {
     justify-content: center;
@@ -418,15 +458,25 @@ footer {
   }
 
   .points_snake {
-    justify-content: center;
+    justify-self: center;
     grid-row: 2/3;
     grid-column: 1/2;
   }
 
   .points_result {
-    justify-content: center;
+    justify-self: center;
     grid-row: 2/3;
     grid-column: 2/3;
+  }
+
+  .mob_menu {
+    grid-row: 1/2;
+    grid-column: 3/4;
+  }
+
+  .record_mob {
+    grid-row: 2/3;
+    grid-column: 3/4;
   }
 
   .language {
@@ -439,12 +489,11 @@ footer {
 
   .container {
     position: relative;
-    border: 2px solid rgba(70, 125, 151, 0.692);
     margin: 5px auto;
     display: grid;
     grid-template: repeat(20, 15px) / repeat(20, 15px);
     grid-auto-flow: row;
-    width: 309px;
-    height: 309px;
+    width: 308px;
+    height: 308px;
   }
 }
