--- a/style/style.css
+++ b/style/style.css
@@ -175,7 +175,7 @@ h2 {
   grid-column: 3/4;
 }
 
-span {
+.logo span {
   background-color: rgba(222, 167, 135, 0.884);
   border: 1px solid black;
   border-radius: 50%;
@@ -500,13 +500,52 @@ footer {
   .mob_menu {
     z-index: 3;
     display: block;
+    position: relative;
     width: 30px;
     height: 18px;
     cursor: pointer;
   }
 
+  .mob_menu span,
   .mob_menu::before,
-  ::after {
-    box-sizing: border-box;
+  .mob_menu::after {
+    left: 0;
+    position: absolute;
+    height: 10%;
+    width: 100%;
+    transition: all .3s ease 0s;
+    background-color: rgba(48, 41, 107, 0.644);
+  }
+
+  .mob_menu::before,
+  .mob_menu::after {
+    content: "";
+  }
+
+  .mob_menu::before {
+    top: 0;
+  }
+
+  .mob_menu::after {
+    bottom: 0;
+  }
+
+  .mob_menu span {
+    top: 50%;
+    transform: scale(1) translate(0px, -50%);
+  }
+
+  .mob_menu._active span {
+    transform: scale(0) translate(0px, -50%);
+  }
+
+  .mob_menu._active::before {
+    top: 50%;
+    transform: rotate(-45deg) translate(0px, -50%);
+  }
+
+  .mob_menu._active::after {
+    top: 50%;
+    transform: rotate(45deg) translate(0px, -50%);
   }
 }
