--- a/style/style.css
+++ b/style/style.css
@@ -308,6 +308,36 @@ a {
   opacity: 1;
 }
 
+.sub_mobMenu {
+  position: absolute;
+  display: block;
+  padding: 20px 40px;
+  z-index: 20;
+  width: 60%;
+  height: 30%;
+  left: -100%;
+  top: 60px;
+  border-radius: 5px;
+  background-color: rgba(79, 113, 119, 0.329);
+  transition: all .4s ease;
+}
+
+.sub_active {
+  left: 0px;
+  transition: all .4s ease;
+}
+
+.s_menu {
+  color: bisque;
+  cursor: pointer;
+  margin: 20px 10px;
+  font-size: 1.2em;
+}
+
+.block_m {
+  display: block;
+}
+
 @keyframes vizi {
   0% {
     opacity: 0;
