--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,10 @@ body {
   font-family: 'Balsamiq Sans', cursive;
 }
 
+.hiden {
+  overflow: hidden;
+}
+
 main {
   max-width: 1200px;
   margin: 0 auto;
@@ -63,6 +67,7 @@ main {
   height: 180px;
   border-radius: 6px;
   padding: 15px 10px 0 15px;
+  z-index: 30;
   color: bisque;
   transition: .7s ease;
   background-color: rgba(116, 147, 231, 0.781);
@@ -71,6 +76,7 @@ main {
 .wind_info_active {
   top: 82px;
   transition: .7s ease;
+  cursor: pointer;
 }
 
 tr,
@@ -111,6 +117,7 @@ th {
 }
 
 .container {
+  overflow: hidden;
   grid-column: 2 / 3;
 }
 
@@ -311,10 +318,10 @@ a {
 .sub_mobMenu {
   position: absolute;
   display: block;
-  padding: 20px 40px;
-  z-index: 20;
-  width: 60%;
-  height: 30%;
+  padding: 10px 10px;
+  z-index: 10;
+  width: 45%;
+  height: 40%;
   left: -100%;
   top: 60px;
   border-radius: 5px;
@@ -328,7 +335,7 @@ a {
 }
 
 .s_menu {
-  color: bisque;
+  color: rgb(54, 65, 114);
   cursor: pointer;
   margin: 20px 10px;
   font-size: 1.2em;
@@ -372,6 +379,8 @@ footer {
 .absolut {
   position: absolute;
   top: -300%;
+  left: 50%;
+  transition: all .8s ease-in-out;
 }
 
 .noVisible {
@@ -577,5 +586,11 @@ footer {
   .mob_menu._active::after {
     top: 50%;
     transform: rotate(45deg) translate(0px, -50%);
+  }
+
+  .right_active {
+    top: 60px;
+    left: 50%;
+    transition: all .4s ease;
   }
 }
