--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 80px 1fr 108px 70px;
+  grid-template-rows: 80px 1fr 108px 70px 210px;
   grid-template-columns: .8fr 1fr .8fr;
 }
 
@@ -367,14 +367,6 @@ a {
   }
 }
 
-footer {
-  width: 100%;
-  height: 70px;
-  border-radius: 5px;
-  background-color: rgba(169, 169, 169, 0.747);
-  grid-row: 4 / 5;
-  grid-column: 1 / end;
-}
 
 .absolut {
   position: absolute;
@@ -418,42 +410,88 @@ footer {
   }
 
   .mobail_button {
-    grid-row: 3/4;
+    grid-row: 5/6;
     grid-column: 1/end;
     display: grid;
-    grid-template-rows: repeat(2, 54px);
-    grid-template-columns: repeat(2, .4fr) 1fr repeat(2, .4fr);
+    grid-template-rows: 80px repeat(2, 70px);
+    grid-template-columns: repeat(2, 70PX) 1fr repeat(2, 70px);
+    padding: 0 30px;
+  }
+
+  .mobBtn {
+    display: flex;
+    width: 70px;
+    height: 70px;
+    border: 2px solid black;
+    border-radius: 100%;
+    padding: 5px;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+  }
+
+  .btnStart,
+  .btnStop {
+    width: 110px;
+    height: 34px;
+    font-size: 20px;
+  }
+
+  .left {
+    grid-row: 3/4;
+    grid-column: 1/4;
+    justify-self: center;
+  }
+
+  .for_btn {
+    display: grid;
+    grid-template-rows: 108px;
+    grid-template-columns: repeat(3, .5fr);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .btnStart {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+
+  .btnStop {
+    grid-row: 1/2;
+    grid-column: 3/4;
+  }
+
+  #enter {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    width: 100px;
+    height: 32px;
+    text-align: center;
+    font-size: 20px;
   }
 
   /* ВЛЕВО */
   #mBot1 {
-    grid-row: 1/2;
+    grid-row: 3/4;
     grid-column: 1/2;
   }
 
   /* ВНИЗ */
   #mBot2 {
-    grid-row: 2/3;
-    grid-column: 2/3;
+    grid-row: 3/4;
+    grid-column: 5/6;
   }
 
   /* ВПРАВО */
   #mBot3 {
-    grid-row: 2/3;
-    grid-column: 4/5;
+    grid-row: 3/4;
+    grid-column: 2/3;
   }
 
   /* ВВЕРХ */
   #mBot4 {
-    grid-row: 1/2;
+    grid-row: 2/3;
     grid-column: 5/6;
-  }
-
-  .left {
-    grid-row: 3/4;
-    grid-column: 2/3;
-    justify-self: center;
-    padding: 5px;
   }
 
   #enter {
