--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ main {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: 80px 1fr 108px 70px 210px;
+  grid-template-rows: 80px 1fr 75px 30px 210px;
   grid-template-columns: .8fr 1fr .8fr;
 }
 
@@ -413,8 +413,8 @@ a {
     grid-row: 5/6;
     grid-column: 1/end;
     display: grid;
-    grid-template-rows: 80px repeat(2, 70px);
-    grid-template-columns: repeat(2, 70PX) 1fr repeat(2, 70px);
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(4, auto);
     padding: 0 30px;
   }
 
@@ -432,9 +432,10 @@ a {
 
   .btnStart,
   .btnStop {
-    width: 110px;
-    height: 34px;
+    width: 100px;
+    height: 50px;
     font-size: 20px;
+    margin: 0 15px;
   }
 
   .left {
@@ -472,26 +473,26 @@ a {
 
   /* ВЛЕВО */
   #mBot1 {
-    grid-row: 3/4;
+    grid-row: 1/2;
     grid-column: 1/2;
   }
 
   /* ВНИЗ */
   #mBot2 {
-    grid-row: 3/4;
-    grid-column: 5/6;
+    grid-row: 2/3;
+    grid-column: 3/4;
   }
 
   /* ВПРАВО */
   #mBot3 {
-    grid-row: 3/4;
+    grid-row: 2/3;
     grid-column: 2/3;
   }
 
   /* ВВЕРХ */
   #mBot4 {
-    grid-row: 2/3;
-    grid-column: 5/6;
+    grid-row: 1/2;
+    grid-column: 4/5;
   }
 
   #enter {
