--- a/style/style.css
+++ b/style/style.css
@@ -52,6 +52,16 @@ main {
   grid-template-columns: .8fr 1fr .8fr;
 }
 
+.header {
+  grid-row: 1 / 2;
+  grid-column: 1 / end;
+  background-color: rgba(116, 101, 156, 0.548);
+  border-radius: 5px;
+  display: grid;
+  grid-template: 70px / repeat(4, 0.8fr) repeat(3, .4fr);
+  position: relative;
+}
+
 .mobBtn {
   display: flex;
   width: 50px;
@@ -91,16 +101,6 @@ th {
   height: 28px;
   width: 50px;
   text-align: center;
-}
-
-.header {
-  grid-row: 1 / 2;
-  grid-column: 1 / end;
-  background-color: rgba(116, 101, 156, 0.548);
-  border-radius: 5px;
-  display: grid;
-  grid-template: 70px / repeat(4, 0.8fr) repeat(3, .4fr);
-  position: relative;
 }
 
 .logo {
@@ -239,14 +239,13 @@ a {
   height: 408px;
 }
 
-.wind_info {
+/* .wind_info {
   position: absolute;
   top: -50px;
   left: 450px;
   width: 250px;
   height: 200px;
-
-}
+} */
 
 .kub {
   width: 20px;
