--- a/style/style.css
+++ b/style/style.css
@@ -429,6 +429,13 @@ a {
     align-items: center;
     justify-content: center;
     font-size: 32px;
+    transition: all .3s ease;
+  }
+
+  .mobBtn:active {
+    background-color: rgb(84, 123, 148);
+    margin-top: 2px;
+    transition: all .3s ease;
   }
 
 
