--- a/style/style.css
+++ b/style/style.css
@@ -429,8 +429,34 @@ a {
     align-items: center;
     justify-content: center;
     z-index: 4;
-    font-size: 32px;
     transition: all .3s ease;
+  }
+
+  .btnLeft {
+    width: 50px;
+    height: 50px;
+    color: azure;
+    transform: rotate(180deg);
+  }
+
+  .btnDown {
+    width: 50px;
+    height: 50px;
+    color: azure;
+    transform: rotate(90deg);
+  }
+
+  .btnRight {
+    width: 50px;
+    height: 50px;
+    color: azure;
+  }
+
+  .btnUp {
+    width: 50px;
+    height: 50px;
+    color: azure;
+    transform: rotate(-90deg);
   }
 
   .mobBtn:active {
